--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای زیادی در شصت و سه درصد گذشته حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد
             </p>
             <div class="button_container">
-                <button class="start_test_button" action="#">
+                <button class="start_test_button" onclick="">
                     شروع آزمون
                 </button>
-                <button class="personel_login_button" action="">
+                <button class="personel_login_button" onclick="document.location = 'personelLogin.html'">
                     ورود اعضا
                 </button>
             </div>
