--- a/personelLogin.html
+++ b/personelLogin.html
@@ -10,7 +10,7 @@
     <div class="login_form_container">
         <div class="personel_form_login_container">
             <section class="form_holder">
-                <form action="#" method="post" class="login_form">
+                <form action="personelDashboard.html" method="post" class="login_form">
 
                 <img src="assets/images/profile.png" class="login_page_icon">
                 <input type="text" placeholder="نام کاربری خود را بنویسید" class="login_field" id="login_username" name="username"> <br>
